fix z-index

--- a/public/css/editorView.css
+++ b/public/css/editorView.css
@@ -81,7 +81,7 @@ code {
   padding-top: 3em;
 
   text-align: left;
-  z-index: 4;
+  z-index: 11;
   background-color: #FFF;
   opacity: 0;
   width: 480px;
